Multi tenant support, Created an abstraction layer for the datastore

--- a/ft-server/src/main/resources/application.properties
+++ b/ft-server/src/main/resources/application.properties
@@ -1,13 +1,8 @@
 server.port=8110
 
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto=update
 
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=demo
-spring.data.mongodb.repositories.enable=true
-
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_PASSWORD}
-spring.datasource.password=${DB_USERNAME}
+spring.feature-toggle.datasource.url=${DB_URL}
+spring.feature-toggle.datasource.username=${DB_PASSWORD}
+spring.feature-toggle.datasource.password=${DB_USERNAME}
