--- a/ft-samples/ft-sample-client-02/pom.xml
+++ b/ft-samples/ft-sample-client-02/pom.xml
@@ -3,18 +3,20 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>feature-toggle</artifactId>
+        <artifactId>ft-samples</artifactId>
         <groupId>org.ft</groupId>
         <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>ft-samples</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>ft-sample-client</module>
-        <module>ft-sample-client-02</module>
-    </modules>
+    <artifactId>ft-sample-client-02</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.ft</groupId>
+            <artifactId>ft-client-spring-boot-starter</artifactId>
+            <version>${revision}</version>
+        </dependency>
+    </dependencies>
 
 </project>
