Introduced Server properties. Code refactoring. client UI

--- a/ft-samples/ft-sample-client-02/src/main/resources/application.properties
+++ b/ft-samples/ft-sample-client-02/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=8112
 
-spring.feature-toggle.url=http://localhost:8110
-spring.feature-toggle.package-scan=org.ft
-spring.feature-toggle.appName=demo-client
+spring.feature-toggle.client.url=http://localhost:8110
+spring.feature-toggle.client.package-scan=org.ft
+spring.feature-toggle.client.appName=ft-client-dev
+spring.feature-toggle.client.deployment-phase=dev
 
