--- a/ft-samples/ft-sample-client/src/main/resources/application.properties
+++ b/ft-samples/ft-sample-client/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8111
 
-spring.feature-toggle.url=http://localhost:8110
-spring.feature-toggle.package-scan=org.ft
-spring.feature-toggle.appName=ft-sample-client
-spring.feature-toggle.deployment-phase=prod
+spring.feature-toggle.client.url=http://localhost:8110
+spring.feature-toggle.client.package-scan=org.ft
+spring.feature-toggle.client.appName=ft-client-prod
+spring.feature-toggle.client.deployment-phase=prod
