--- a/ft-server/src/main/resources/application.properties
+++ b/ft-server/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.feature-toggle.datasource.url=${DB_URL}
 spring.feature-toggle.datasource.username=${DB_PASSWORD}
 spring.feature-toggle.datasource.password=${DB_USERNAME}
+spring.feature-toggle.server.deployment-phase=dev
