--- a/ft-samples/ft-sample-client-02/pom.xml
+++ b/ft-samples/ft-sample-client-02/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>ft-client-spring-boot-starter</artifactId>
             <version>${revision}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
