Initial changes to integrate ft-service with JIRA

--- a/ft-server/src/main/resources/application.properties
+++ b/ft-server/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.feature-toggle.datasource.url=${DB_URL}
 spring.feature-toggle.datasource.username=${DB_PASSWORD}
 spring.feature-toggle.datasource.password=${DB_USERNAME}
 spring.feature-toggle.server.deployment-phase=dev
+
+spring.feature-toggle.jira.url=${JIRA_URL}
+spring.feature-toggle.jira.username=${JIRA_USERNAME}
+spring.feature-toggle.jira.password=${JIRA_PASSWORD}
