--- a/ft-server/pom.xml
+++ b/ft-server/pom.xml
@@ -47,6 +47,7 @@
     </dependencies>
 
     <build>
+        <finalName>ft-server</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
